# ap_policy

./: .gitignore  Cargo.toml  README.md  build_android.sh
.cargo/: config.toml
crates/magiskpolicy/: .gitignore  Cargo.toml
crates/magiskpolicy/src/: main.rs
crates/policy/: .gitignore  Cargo.toml  build.rs
crates/policy/c/: compat.c  sepol_wrapper.c  sepol_wrapper.h
crates/policy/src/: lib.rs  rules.rs  sepol.rs  sepol_impl.rs  statement.rs  stub.rs
